<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 ParanoidAndroid Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Aero Control</string>
    <string name="slider_updates">Updates</string>
    <string name="slider_rom">ROM</string>
    <string name="slider_google_apps">Google apps</string>
    <string name="slider_kernel_features">Kernel Features</string>
    <string name="slider_changelog">Changelog</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="check_for_updates">Check</string>
    <string name="changelog_error">Could not load changelog!</string>

    <!-- UPDATES -->
    <string name="all_up_to_date">You\'re up to date!</string>
    <string name="rom_gapps_new_version">New versions found!</string>
    <string name="rom_new_version">New rom version found!</string>
    <string name="gapps_new_version">New google apps version found!</string>
    <string name="rom_scanning">Checking for new versions...</string>
    <string name="gapps_version">Google apps %1$s</string>
    <string name="rom_outdated">Your ROM is outdated!</string>
    <string name="gapps_outdated">Your google apps are outdated!</string>
    <string name="no_rom_updates">No ROM updates found</string>
    <string name="no_gapps_updates">No google apps updates found</string>
    <string name="check_rom_updates_no_new">No ROM updates found</string>
    <string name="check_rom_updates_error">Error checking for ROM updates</string>
    <string name="check_gapps_updates_no_new">No google apps updates found</string>
    <string name="check_gapps_updates_error">Error checking for google apps updates</string>

    <!-- DOWNLOADS/NOTIFICATIONS -->
    <string name="download_title">Downloading %1$s...</string>
    <string name="new_rom_found_title">New rom version found</string>
    <string name="new_gapps_found_title">New google apps package found</string>
    <string name="new_package_name">%1$s</string>
    <string name="new_packages">%1$s updates available for download</string>
    <string name="cancel_download_alert_title">Cancel download</string>
    <string name="cancel_download_alert_summary">Do you want to cancel the current download?</string>
    <string name="cancel_download_alert_yes">Yes</string>
    <string name="cancel_download_alert_no">No</string>
    <string name="already_downloading_rom">You are alredy downloading a ROM update.</string>
    <string name="already_downloading_gapps">You are alredy downloading a google apps update.</string>
    <string name="calculating_md5">Calculating MD5 sum...</string>
    <string name="md5_mismatch">MD5 mismatch</string>
    <string name="md5_mismatch_summary">Received:\n%1$s\nCalculated:\n%2$s</string>

    <!-- RECOVERY -->
    <string name="recovery_cwm">ClockworkMod (CWM)</string>
    <string name="recovery_twrp">TeamWin (TWRP)</string>
    <string name="recovery_select_alert_title">Select recovery</string>
    <string name="recovery_select_alert_summary">Specify the recovery you are using. You can change this option later in the app settings.</string>
    <string name="recovery_select_sdcard_alert_title">Storage path</string>
    <string name="recovery_select_sdcard_alert_summary">Specify the storage name</string>
    <string name="recovery_select_sdcard_alert_error">Please specify the storage name</string>
    <string name="recovery_changed">Recovery %1$s configured.</string>

    <!-- SETTINGS -->
    <string name="settings_expertmode_title">Expert mode</string>
    <string name="settings_expertmode_summary">Show all options</string>
    <string name="settings_update">Updates</string>
    <string name="settings_checktime_title">Update check frequency</string>
    <string name="settings_checktime_summary">Specify the time between each update check</string>
    <string name="time_notifications_never">Don\'t check</string>
    <string name="time_notifications_half_an_hour">Half an hour</string>
    <string name="time_notifications_an_hour">1 hour</string>
    <string name="time_notifications_two_hours">2 hours</string>
    <string name="time_notifications_five_hours">5 hours</string>
    <string name="time_notifications_daily">Daily</string>
    <string name="settings_download_path">Downloads folder</string>
    <string name="settings_download_path_alert_title">Downloads path</string>
    <string name="settings_download_path_alert_summary">Specify the path to save the downloads</string>
    <string name="settings_download_path_alert_error">Please specify the path to save the downloads</string>
    <string name="settings_download_finished_title">Open app on download finished</string>
    <string name="settings_download_finished_summary">Untick this option if you want to manually enter the app after a download is completed</string>
    <string name="settings_recovery">Recovery</string>
    <string name="settings_selectrecovery_title">Select recovery</string>
    <string name="settings_selectrecovery_summary">Select the recovery installed in your device</string>
    <string name="settings_internalsdcard_title">Internal storage path</string>
    <string name="settings_internalsdcard_summary">Specify the internal storage path used by the recovery</string>
    <string name="settings_externalsdcard_title">External storage path</string>
    <string name="settings_externalsdcard_summary">Specify the external storage path used by the recovery</string>
    <string name="settings_showoptions_title">Options</string>
    <string name="settings_showoptions_summary">Chose flash options to show</string>
    <string name="install_option_backup">Backup</string>
    <string name="install_option_wipe_system">Wipe System</string>
    <string name="install_option_wipe_data">Wipe Data</string>
    <string name="install_option_wipe_caches">Wipe Cache &amp; Dalvik</string>

    <!-- REBOOT & INSTALL-->
    <string name="backup">Backup</string>
    <string name="wipe_system">Wipe System</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="wipe_caches">Wipe Cache &amp; Dalvik</string>
    <string name="alert_backup_space_title">Space left</string>
    <string name="alert_backup_space_message">There\'s less than %1$sGB in the internal SD card. Do you want to continue with the backup?</string>
    <string name="alert_backup_title">Backup</string>
    <string name="alert_backup_message">Specify the backup name (spaces will be removed).</string>
    <string name="system">System</string>
    <string name="data">Data</string>
    <string name="cache">Cache</string>
    <string name="recovery">Recovery</string>
    <string name="boot">Boot</string>
    <string name="androidsecure">Android secure</string>
    <string name="sdext">SD-Ext</string>
    <string name="alert_reboot_install_title">Select actions and install</string>
    <string name="alert_reboot_only_install_title">Install update</string>
    <string name="alert_reboot_one_message">Your device will reboot into recovery and install the file %1$s.</string>
    <string name="alert_reboot_more_message">Your device will reboot into recovery and install %1$s files.</string>
    <string name="alert_reboot_add_zip">Add zip</string>
    <string name="alert_reboot_now">Install now</string>
    <string name="alert_wipe_system_title">System wipe</string>
    <string name="alert_wipe_system_message">You are about to perform a system wipe. Are you sure you want to do that?</string>
    <string name="invalid_zip_file">Invalid ZIP file.</string>
    <string name="install_file_manager_error">No application found to pick the zip file. Please install a file manager.</string>
</resources>
